PC-159: Fix bug when pricing parameter names are too long

--- a/app/assets/stylesheets/application/form_group.scss
+++ b/app/assets/stylesheets/application/form_group.scss
@@ -19,6 +19,10 @@
     font-size: 14px;
     font-weight: 700;
     line-height: 1;
+    max-width: 175px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 
   .pc-suffix {
